--- a/views/parts/navigation.phtml
+++ b/views/parts/navigation.phtml
@@ -73,6 +73,32 @@
     <div class="btnLabel">More</div>
     <ul style="width:145px">
       <li class="nav_dropdown">
+          <div style="height: 29px">
+              <div id="lp_icon" class="nav_icon"></div>
+              <div class="btnLabel">Least Portals</div>
+          </div>
+          <ul style="width:140px">
+              <li>
+                  <a href="/lp/sp">
+                      <div class="nav_icon" style="background: url('/images/sp_noborder.jpg'); background-size: 29px 29px;"></div>
+                      <div class="btnLabel">Single Player</div>
+                  </a>
+              </li>
+              <li>
+                  <a href="/lp/coop">
+                      <div class="nav_icon" style="background: url('/images/coop_noborder.jpg'); background-size: 29px 29px;"></div>
+                      <div class="btnLabel">Cooperative</div>
+                  </a>
+              </li>
+          </ul>
+      </li>
+      <li>
+          <a href="/wallofshame" style="height: 29px">
+            <div class="nav_icon" style="background: url('/images/wallofshame.png'); background-size: 29px 29px;"></div>
+            <div class="btnLabel">Wall of Shame</div>
+          </a>
+      </li>
+      <li class="nav_dropdown">
           <a href="http://www.speedrun.com/Portal_2" target="_blank" style="height: 29px">
               <div class="nav_icon" style="background: url('/images/running.png'); background-size: 29px 29px;"></div>
               <div class="btnLabel">Full Game Runs</div>
@@ -96,44 +122,8 @@
             <div class="btnLabel">About</div>
           </a>
       </li>
-      <li>
-          <a href="/wallofshame" style="height: 29px">
-            <div class="nav_icon" style="background: url('/images/wallofshame.png'); background-size: 29px 29px;"></div>
-            <div class="btnLabel">Wall of Shame</div>
-          </a>
-      </li>
     </ul>
 </div>
-
-
-<!--<div class="nav_dropdown">-->
-<!--    <div id="lp_icon" class="nav_icon"></div>-->
-<!--    <div class="label">Least Portals</div>-->
-<!--    <ul style="width:150px">-->
-<!--        <li>-->
-<!--            <a href="/lp/sp" style="height: 29px">-->
-<!--                <div class="nav_icon" style="background: url('/images/sp_noborder.jpg'); background-size: 29px 29px;"></div>-->
-<!--                <div class="label">Single Player</div>-->
-<!--            </a>-->
-<!--        </li>-->
-<!--        <li>-->
-<!--            <a href="/lp/coop" style="height: 29px">-->
-<!--                <div class="nav_icon" style="background: url('/images/coop_noborder.jpg'); background-size: 29px 29px;"></div>-->
-<!--                <div class="label">Cooperative</div>-->
-<!--            </a>-->
-<!--        </li>-->
-<!--    </ul>-->
-<!--</div>-->
-
-<!--<a href="/lp" class="nav_button">-->
-<!--    <div id="lp_icon" class="nav_icon"></div>-->
-<!--    <div class="label">Least Portals</div>-->
-<!--</a>-->
-
-<!-- <a href="/about" class="nav_button">
-    <div id="aperture_icon" class="nav_icon"></div>
-    <div class="btnLabel">About</div>
-</a> -->
 
 <script>
 
