--- a/views/chamber.phtml
+++ b/views/chamber.phtml
@@ -190,7 +190,7 @@
         gridTextSize: 11,
         lineColors: ['#2f96d1'],
         hideHover: 'auto',
-        gridTextFamily : "Segoe UI",
+        gridTextFamily : "Open Sans",
         gridTextColor: "#777",
         smooth: false
     });
