--- a/views/leastportals.phtml
+++ b/views/leastportals.phtml
@@ -13,7 +13,7 @@
     <?php $i=1; foreach(array_keys($view->board) as $chapter): ?>
         <?php $chapterName = $mapInfo["chapters"][$chapter]["chapterName"]?>
         <div class="chapterinfo">
-            <h1 class="chapternumber"><?= (($mode == "coop") ? "Course " : "Chapter ")."0".$i;?></h1>
+            <h1 class="chapternumber"><?= (($mode == "coop") ? "Course " : "Chapter ")."0".$i++;?></h1>
             <h1 class="chaptername"><?=$chapterName;?></h1>
         </div>
         <div class="chambers">
