Use https instead of http for external links

--- a/views/profile.phtml
+++ b/views/profile.phtml
@@ -82,7 +82,7 @@
                     <?php endif; ?>
                     <div class="usericons">
                         <?php if(strlen($user->userData->youtube) > 0): ?>
-                            <a href="http://www.youtube.com<?=$user->userData->youtube;?>" style="text-decoration : none;" target="_blank">
+                            <a href="https://www.youtube.com<?=$user->userData->youtube;?>" style="text-decoration : none;" target="_blank">
                                 <span class="youtubeLink fa-stack">
                                   <i class="fa fa-square fa-stack-2x"></i>
                                   <i class="fa fa-play fa-stack-1x"></i>
@@ -91,14 +91,14 @@
                         <?php endif; ?>
 
                         <?php if(strlen($user->userData->twitch) > 0): ?>
-                            <a href="http://www.twitch.tv/<?=$user->userData->twitch;?>" style="text-decoration : none;" target="_blank">
+                            <a href="https://www.twitch.tv/<?=$user->userData->twitch;?>" style="text-decoration : none;" target="_blank">
                                 <span class="twitchLink fa-stack">
                                   <i class="fa fa-square fa-stack-2x"></i>
                                   <i class="fa fa-twitch fa-stack-1x"></i>
                                 </span>
                             </a>
                         <?php endif; ?>
-                        <a href="http://steamcommunity.com/profiles/<?=$user->profileNumber;?>" style="text-decoration : none;" target="_blank">
+                        <a href="https://steamcommunity.com/profiles/<?=$user->profileNumber;?>" style="text-decoration : none;" target="_blank">
                             <span class="steamLink fa-stack">
                                   <i class="fa fa-square fa-stack-2x"></i>
                                   <i class="fa fa-steam-square fa-stack-2x"></i>
