--- a/views/profile.phtml
+++ b/views/profile.phtml
@@ -970,8 +970,8 @@
                     "your past scores by clicking the <i class='fa fa-fw fa-xs fa-caret-right' aria-hidden='true'></i> " +
                     "button to the left of it. Make sure you link the right video/demo to the right score.<br><br>"+
                     "New scores can be submitted by clicking the 'Create new submission' button.<br><br>" +
-                    "<b>Note:</b> for more information about recording demos and how points are calculated for your records, go <a href='/about'>here</a>.<br><br>" +
-                    "<b>Note:</b> you can use timestamped YouTube videos. <br><br>" +
+                    "<b>Note:</b> For more information about recording demos and how points are calculated for your records, go <a href='/about'>here</a>.<br><br>" +
+                    "<b>Note:</b> You can use timestamped YouTube videos. <br><br>" +
                 "</div>");
 
             $descriptionButton.click(function() {
