--- a/views/chamber.phtml
+++ b/views/chamber.phtml
@@ -3,6 +3,9 @@
 <?php $chapter = $mapInfo["chapters"][$mapInfo["maps"][$GLOBALS["chamberID"]]["chapterId"]]["chapterName"]; ?>
 <?php $map = $mapInfo["maps"][$GLOBALS["chamberID"]]["mapName"]; ?>
 <?php $isPublic = $mapInfo["maps"][$GLOBALS["chamberID"]]["isPublic"]; ?>
+<?php $isFrozen = $mapInfo["maps"][$GLOBALS["chamberID"]]["is_frozen"]; ?>
+<?php $isGlitched = $mapInfo["maps"][$GLOBALS["chamberID"]]["is_glitched"]; ?>
+<?php $relativeId = $mapInfo["maps"][$GLOBALS["chamberID"]]["rel_id"]; ?>
 <?php $wrs = Leaderboard::getChangelog(array("chamber" => $GLOBALS["chamberID"], "wr" => "1", "banned" => 0));?>
 <?php $youtubeIDs = Cache::get("youtubeIDs".$GLOBALS["chamberID"])?>
 <?php include("util/PageGenerator.php") ?>
@@ -12,10 +15,9 @@
     <div class="chamberview" style="background-image: url('/images/chambers_full/<?=$GLOBALS["chamberID"];?>.jpg')">
         <div class="chamberinfo">
             <div class="chamberchaptername"><?=$chapter;?></div>
-            <?php if($isPublic == "1"): ?>
-                <a href="http://steamcommunity.com/stats/Portal2/leaderboards/<?=$GLOBALS["chamberID"];?>" target="_blank" class="chamberchambername"><?=$map;?></a>
-            <?php endif; ?>
-            <?php if($isPublic == "0"): ?>
+            <?php if($isPublic > 0): ?>
+                <a href="https://steamcommunity.com/stats/Portal2/leaderboards/<?=$GLOBALS["chamberID"];?>" target="_blank" class="chamberchambername"><?=$map;?></a>
+            <?php else:?>
                 <span class="chamberchambername"><?=$map;?></span>
             <?php endif; ?>
             <div class="controls topright">
@@ -26,14 +28,24 @@
                     </a>
                 </div>
             </div>
+            <?php if($relativeId): ?>
+                <div class="controls topright below">
+                    <div class="button linkButton chamberHistoryButton">
+                        <a href="/chamber/<?=$relativeId?>" class="name">
+                            <i class="fa fa-fw fa-arrows-h" aria-hidden="true"></i>
+                            <?=$isGlitched?"Switch n/G":"Switch w/G"?>
+                        </a>
+                    </div>
+                </div>
+            <?php endif; ?>
+            <?php if($isPublic == 1): ?>
             <div class="controls topleft">
-                <?php if($isPublic): ?>
                     <div class="button standardButton fetchChamberScoresButton">
                         <i class="fa fa-fw fa-refresh" aria-hidden="true"></i>
                         Fetch new scores
                     </div>
-                <?php endif; ?>
             </div>
+                <?php endif; ?>
             <div class="controls left">
                 <div class="button standardButton wrHistoryButton">
                     <span class="name">
@@ -63,11 +75,20 @@
             </div>
         </div>
     </div>
-    <?php if($isPublic == "0"): ?>
+    <?php if($isPublic == 2): ?>
+        <div class="not-public-chambers">
+            <span class="notification">
+              This chamber does not sync automatically with the official Steam leaderboard.
+              You therefore need to submit any scores you obtain for this chamber manually via your profile.
+              Note that runs here are done without the use of moving portal physics.
+            </span>
+            <span class="close-btn"></span>
+        </div>
+    <?php elseif($isPublic == 0): ?>
         <div class="not-public-chambers">
             <span class="notification">
               This chamber is not available through official Steam leaderboard pages, but is accessible by modifying the game's
-              internal map list. A tutorial for doing this can be found <b><a href="http://youtu.be/8mtyKGh_e-w?t=18m30s" target="_blank">here</a></b>.
+              internal map list. A tutorial for doing this can be found <b><a href="https://youtu.be/8mtyKGh_e-w?t=18m30s" target="_blank">here</a></b>.
               Note that unlike an official chamber, scores you obtain for this chamber are not automatically synced to this website.
               You therefore need to submit any scores you obtain for this chamber manually via your profile.
             </span>
@@ -99,7 +120,11 @@
         $(".entries.pages").css("height", Math.min(25, <?=count($mapData)?>) * 43);
 
         $(".rank").each(function() {
+            <?php if (!$isFrozen): ?>
             pointsOnHover($(this), parseInt($(this).text()), { placement: 'left' });
+            <?php else:?>
+                pointsOnHover($(this), 0, { placement: 'left' });
+            <?php endif;?>
         });
 
         $(".fa.fa-pencil").each(function() {
