Move rule updates to own section

--- a/views/about.phtml
+++ b/views/about.phtml
@@ -8,10 +8,6 @@
         Any and all modifications of the game that change the physics or controls in any way is strictly banned, with the exception of some console commands, see below.
         <br>
         In particular, note that this means that changing the server tickrate is forbidden, as well as any usage of the 'give' command.
-        <br><br>
-        Futhermore, all top 5 scores obtained after May 11th, 2017 require proof in the form of a demo or a video. If no sufficient proof can be provided, the score will be removed.
-        <br><br>
-        As of January 6th, 2019 scripting and binding multiple command buttons to a key is banned, value of cl_fov is only valid between 50 to 140 and taunt manipulation is now allowed.
     </div>
 
     <h2 class="subtitle">Modifications</h2>
@@ -83,6 +79,32 @@
         Admins are allowed to question any runner for proof at any time in case cheating is suspected.
         <br>
         Demo recording is currently the easiest way to determine if someone is cheating or not.
+    </div>
+
+    <h2 class="subtitle">Changes</h2>
+    <div class="container smallContainer">
+        <table class="table table-condensed">
+            <tr>
+                <td>2017-05-11</td>
+                <td>All top 5 scores require proof in the form of a demo or a video. If no sufficient proof can be provided, the score will be removed.</td>
+            </tr>
+            <tr>
+                <td>2019-01-06</td>
+                <td>Scripting and binding multiple command buttons to a key is banned, value of cl_fov is only valid between 50 to 140 and taunt manipulation is now allowed.</td>
+            </tr>
+            <tr>
+                <td>2019-08-23</td>
+                <td>Changing console variable m_yaw to effectively stop mouse movement in either the horizontal or vertical direction is banned.</td>
+            </tr>
+            <tr>
+                <td>2019-09-14</td>
+                <td>Console variable fps_max may only be set to values between 30 and 999. Uncapped value of 0 will not get your run banned if it is determined to not have given an advantage.</td>
+            </tr>
+            <tr>
+                <td>2019-10-12</td>
+                <td>All top 10 scores require complete proof in the form of a demo or video. All top 5 scores require complete demos as proof, videos will not be accepted. All previous scores will be grandfathered in.</td>
+            </tr>
+        </table>
     </div>
 
     <h1 class="title">Console commands</h1>
