Fix table style

--- a/views/about.phtml
+++ b/views/about.phtml
@@ -85,7 +85,7 @@
     <div class="container smallContainer">
         <table class="table table-condensed">
             <tr>
-                <td>2017-05-11</td>
+                <td style="min-width: 100px">2017-05-11</td>
                 <td>All top 5 scores require proof in the form of a demo or a video. If no sufficient proof can be provided, the score will be removed.</td>
             </tr>
             <tr>
