--- a/views/leastportals.phtml
+++ b/views/leastportals.phtml
@@ -31,7 +31,11 @@
 						<div class="titlebg"><a<?=($mapData["isPublic"]) ? ' href="https://steamcommunity.com/stats/Portal2/leaderboards/'.$steamId.'"' : ' style="text-decoration: unset"'?>><?=$mapData["mapName"]; ?></a></div>
                         <div class="chamber_icons_right">
                             <span class="icons youtubeEmbedButton fa-stack"
-                                onclick="window.open('https://www.youtube.com/results?search_query=Portal+2+<?=$mapData["mapName"]?>+<?=$boardData["portals"]?>+<?=$grammar?>')">
+                                <?php if ($boardData['youtubeId'] == NULL): ?>
+                                    onclick="window.open('https://www.youtube.com/results?search_query=Portal+2+<?=$mapData["mapName"]?>+<?=$boardData["portals"]?>+<?=$grammar?>')">
+                                <?php else: ?>
+                                    onclick="window.open('https://www.youtube.com/watch?v=<?=$boardData["youtubeId"]?>')">
+                                <?php endif; ?>
                                 <i class="fa fa-square fa-stack-1x"></i>
                                 <i class="fa fa-youtube-play fa-stack-2x"></i>
                             </span>
