Fix timestamp videos

--- a/views/leastportals.phtml
+++ b/views/leastportals.phtml
@@ -34,7 +34,7 @@
                                 <?php if ($boardData['youtubeId'] == NULL): ?>
                                     onclick="window.open('https://www.youtube.com/results?search_query=Portal+2+<?=$mapData["mapName"]?>+<?=$boardData["portals"]?>+<?=$grammar?>')">
                                 <?php else: ?>
-                                    onclick="window.open('https://www.youtube.com/watch?v=<?=$boardData["youtubeId"]?>')">
+                                    onclick="window.open('https://youtu.be/<?=$boardData["youtubeId"]?>')">
                                 <?php endif; ?>
                                 <i class="fa fa-square fa-stack-1x"></i>
                                 <i class="fa fa-youtube-play fa-stack-2x"></i>
